--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Naruto Website</title>
 
     <!-- custome css link -->
-    <link rel="stylesheet" href="/naruto website/style.css">
+    <link rel="stylesheet" href="style.css">
 
     <!-- boxicon link -->
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
@@ -58,7 +58,7 @@
             <a href="#" class="ctaa"><i class="ri-google-play-fill"></i>Download</a>
         </div>
         <div class="hero-img">
-            <img src="/naruto website/pngwing.com.png" class="naruto">
+            <img src="pngwing.com.png" class="naruto">
         </div>
     </section>
 
@@ -76,7 +76,7 @@
     <!-- scrollrevel effect -->
     <script src="https://unpkg.com/scrollreveal"></script>
     <!-- javascript file -->
-    <script src="/naruto website/script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
